--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,5 +1,5 @@
 @import 'libs/bootstrap-reboot.min.css';
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&family=Roboto&display=swap');
+//@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&family=Roboto&display=swap');
 
 @import 'base/variables';
 @import 'base/mixins';
@@ -29,3 +29,4 @@
 @import 'blocks/menu';
 @import 'blocks/about';
 @import 'blocks/resume';
+@import 'blocks/skill';
