addapted section promo and about

--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -24,8 +24,8 @@
     color: #000;
     text-decoration: none;
     font-weight: 700;
-    //font-size: 14px;
-    //line-height: 21px;
+    font-size: 14px;
+    line-height: 21px;
     &:hover {
       color: #474545;
     }
