--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -1,11 +1,25 @@
-@media (max-width: 1439px){
+@media (max-width: 1439px) {
   .sidepanel {
     display: none;
   }
 
+  .skill {
+    &__block {
+      margin-top: 50px;
+      grid-template-columns: repeat(4, 260px);
+      grid-template-rows: repeat(2, 260px);
+      gap: 10px;
+      justify-content: center;
+    }
+
+    &__item {
+      padding: 20px;
+    }
+  }
+
 }
 
-@media (max-width: 1200px){
+@media (max-width: 1200px) {
   .container {
     max-width: 960px;
   }
@@ -14,19 +28,42 @@
       grid-template-columns: 400px 520px;
       gap: 40px;
     }
+
     &__skills {
       grid-template: repeat(2,minmax(115px,auto))/repeat(2,250px);
       column-gap: 20px;
     }
+
     &__skills-item {
       grid-template-columns: 40px 195px;
       column-gap: 15px;
     }
   }
+  .resume {
+    padding: 120px 0;
 
+    &__wrapper {
+      padding: 0 25px;
+      column-gap: 60px;
+    }
+  }
+
+  .skill {
+    &__block {
+      grid-template-columns: repeat(3, 260px);
+      grid-template-rows: repeat(3, 260px);
+    }
+  }
+
+  .progress__block {
+    margin: 80px 0;
+    grid-template-columns: repeat(3, minmax(290px, auto));
+    column-gap: 20px
+  }
 }
 
-@media (max-width: 992px){
+
+@media (max-width: 992px) {
   .container {
     max-width: 720px;
   }
@@ -34,10 +71,12 @@
     &__wrapper {
       grid-template-columns: 300px 380px;
     }
+
     &__skills {
       grid-template-columns: 380px;
-      grid-auto-rows: minmax(115px,auto);
+      grid-auto-rows: minmax(115px, auto);
     }
+
     &__skills-item {
       grid-template-columns: 40px 325px;
     }
@@ -48,10 +87,34 @@
       font-size: 30px;
     }
   }
+  .resume {
+    padding: 60px 0;
+
+    &__wrapper {
+      margin-top: 30px;
+      padding: 0 5px;
+      grid-template-columns: repeat(2, minmax(345px, auto));
+      column-gap: 20px;
+    }
+  }
+
+  .skill {
+    &__block {
+      grid-template-columns: repeat(3, 230px);
+      grid-template-rows: repeat(3, 230px);
+    }
+    &__item {
+      padding: 10px;
+    }
+  }
+
+  .progress__block {
+    grid-template-columns: repeat(3, minmax(200px, auto));
+  }
 
 }
 
-@media (max-width: 768px){
+@media (max-width: 768px) {
   .container {
     max-width: 540px;
   }
@@ -67,43 +130,77 @@
   }
   .about {
     padding-top: 40px;
+
     &__wrapper {
       grid-template-columns: 1fr;
       grid-template-rows: 400px repeat(2, auto);
       gap: 40px;
     }
+
     &__photo {
       grid-row: unset;
+      overflow: hidden;
+
       img {
-        object-fit: cover;
+        object-fit: contain;
         width: 100%;
-        height: 100%;
-        //background-position: center center;
+        height: 130%;
       }
     }
+
     &__skills {
       grid-template-columns: repeat(2, 260px);
+
       &-item {
         grid-template-columns: 40px 200px;
         row-gap: 20px;
       }
     }
   }
+  .resume {
+    &__wrapper {
+      grid-template-columns: 500px;
+      gap: 30px
+    }
+  }
+
+  .skill {
+    &__block {
+      grid-template-columns: repeat(2, 230px);
+      grid-template-rows: repeat(4, 230px);
+    }
+  }
+
+  .progress__block {
+    grid-template-columns: repeat(2, minmax(200px, auto));
+  }
 
 }
 
-@media (max-width: 576px){
+@media (max-width: 576px) {
   .container {
     width: 100%;
-    padding: 0 10px;
+    padding: 0 8px;
   }
   .title {
     &_fz48 {
       font-size: 26px;
     }
+
     &_fz34 {
       font-size: 24px;
     }
+
+    &_section-title {
+      margin-bottom: 25px;
+    }
+
+    &_section-subtitle {
+      margin-bottom: 15px;
+    }
+  }
+  .divider {
+    margin: 0 auto;
   }
 
   .hamburger {
@@ -112,6 +209,7 @@
 
   .promo {
     background: url('../img/main_bg.jpg') no-repeat 57%/cover;
+
     &__btns {
       margin-top: 30px;
     }
@@ -127,9 +225,44 @@
     &__wrapper {
       grid-template-rows: 340px repeat(2, auto);
     }
+
     &__skills {
       grid-template-columns: 1fr;
     }
+  }
+  .resume {
+    padding: 40px 0;
+
+    &__wrapper {
+      grid-template-columns: 310px;
+      gap: unset;
+      //margin-top: 40px;
+    }
+
+    &__column {
+      margin-top: 40px;
+    }
+
+    &__item-body {
+      padding: 0 20px 0 45px;
+    }
+  }
+
+  .skill {
+    &__block {
+      grid-template-columns: 270px;
+      grid-template-rows: unset;
+      grid-auto-rows: 270px;
+    }
+    &__item {
+      padding: 30px 30px 25px 30px;
+    }
+  }
+
+  .progress__block {
+    margin-top: 40px;
+    grid-template-columns: minmax(200px, auto);
+    gap: 40px;
   }
 
 }
